--- a/assets/css/stylo.css
+++ b/assets/css/stylo.css
@@ -29,6 +29,17 @@ HEADER
 /******************************************************************
 
 ******************************************************************/
+
+.TodaPantallaCentro{
+	height: 100%;
+	min-height: 1000px;
+}
+
+a {
+    color: #fff;
+    text-decoration: none;
+}
+
 .imgGit{
 	width: 50px;
     height: 50px;
